Fix kie-uberfire-wires-webapp following move to UF0.5